tests/compile-fail/integration__integration__general__func_const_ins.snap
---
source: tests/integration/general.rs
expression: stderr
---
error: raw instruction in const context
   ┌─ <input>:27:13
   │
27 │             ins_23();
   │             ^^^^^^ forbidden in this context


